--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -61,15 +61,14 @@
           <p id="pm-desc" class="mt-3 text-sm text-gray-700"></p>
 
             <div class="mt-4">
-            <label class="block text-sm font-medium">Variantes</label>
+            <label id="order-quantity-label" class="block text-sm font-medium">Quantité</label>
             <div class="flex items-center space-x-2">
-              <select id="pm-variant" class="mt-1 block w-full border rounded p-2">
-                <option value="">Aucune</option>
-              </select>
+              <select id="pm-variant" class="mt-1 block w-full border rounded p-2"></select>
               <span id="pm-variant-stock" class="text-sm text-gray-600"></span>
               <div class="ml-2">
                 <label for="order-quantity" class="sr-only">Quantité</label>
                 <input id="order-quantity" type="number" min="1" value="1" class="w-24 border rounded p-2" />
+                <div id="order-quantity-feedback" class="text-sm text-red-600 mt-1"></div>
               </div>
             </div>
           </div>
