--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -14,6 +14,9 @@
         <img src="../assets/logo.png" alt="AURORA" class="h-10 w-10 object-contain" onerror="this.style.display='none'" />
         <span>AURORA</span>
       </h1>
+      <div>
+        <button id="open-pack-btn" class="ml-4 bg-green-600 text-white px-3 py-2 rounded">Composer un pack</button>
+      </div>
     </header>
 
     <!-- Search & Filters -->
@@ -42,14 +45,14 @@
 
   <!-- Product detail modal -->
   <div id="product-modal" class="fixed inset-0 bg-black/40 hidden flex items-center justify-center z-50">
-    <div class="bg-white rounded-lg w-11/12 max-w-2xl p-6 shadow-lg max-h-[85vh] overflow-y-auto">
+    <div class="bg-white rounded-lg w-full max-w-2xl sm:w-11/12 p-4 sm:p-6 shadow-lg max-h-[85vh] overflow-y-auto">
       <div class="flex justify-between items-start">
         <h2 id="pm-name" class="text-lg font-semibold">Produit</h2>
         <button id="pm-close" class="text-gray-500 hover:text-gray-800">✕</button>
       </div>
       <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4">
         <div>
-          <img id="pm-image" src="" alt="" class="w-full h-56 object-cover rounded" />
+          <img id="pm-image" src="" alt="" class="w-full h-48 sm:h-56 md:h-64 object-cover rounded" />
         </div>
         <div>
           <div id="pm-unit" class="text-sm text-gray-600"></div>
@@ -60,14 +63,14 @@
           <div id="pm-expiry" class="mt-2 text-sm text-orange-600"></div>
           <p id="pm-desc" class="mt-3 text-sm text-gray-700"></p>
 
-            <div class="mt-4">
+          <div class="mt-4">
             <label id="order-quantity-label" class="block text-sm font-medium">Quantité</label>
-            <div class="flex items-center space-x-2">
+            <div class="flex flex-col sm:flex-row sm:items-center sm:space-x-2 gap-2">
               <select id="pm-variant" class="mt-1 block w-full border rounded p-2"></select>
               <span id="pm-variant-stock" class="text-sm text-gray-600"></span>
-              <div class="ml-2">
+              <div class="w-full sm:w-auto">
                 <label for="order-quantity" class="sr-only">Quantité</label>
-                <input id="order-quantity" type="number" min="1" value="1" class="w-24 border rounded p-2" />
+                <input id="order-quantity" type="number" min="1" value="1" class="w-full sm:w-24 border rounded p-2" />
                 <div id="order-quantity-feedback" class="text-sm text-red-600 mt-1"></div>
               </div>
             </div>
@@ -124,6 +127,46 @@
       <div id="result-message" class="mt-3 text-sm text-gray-800"></div>
     </div>
   </div>
+
+    <!-- Pack composer modal -->
+    <div id="pack-modal" class="fixed inset-0 bg-black/40 hidden flex items-center justify-center z-50">
+      <div class="bg-white rounded-lg w-full max-w-3xl sm:w-11/12 p-4 sm:p-6 shadow-lg max-h-[85vh] overflow-y-auto">
+        <div class="flex justify-between items-start">
+          <h2 class="text-lg font-semibold">Composer un pack</h2>
+          <button id="pack-close" class="text-gray-500 hover:text-gray-800">✕</button>
+        </div>
+        <div class="mt-4">
+          <p class="text-sm text-gray-600">Sélectionnez plusieurs produits et définissez la quantité pour chacun.</p>
+        </div>
+        <div class="mt-4">
+          <div id="pack-products" class="space-y-3 max-h-56 overflow-y-auto border rounded p-2"></div>
+        </div>
+        <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4">
+          <div>
+            <label class="block text-sm font-medium">Votre nom</label>
+            <input id="pack-name" type="text" class="w-full border rounded p-2" />
+          </div>
+          <div>
+            <label class="block text-sm font-medium">Ville (livraison)</label>
+            <select id="pack-city" class="w-full border rounded p-2"></select>
+          </div>
+        </div>
+        <div class="mt-4">
+          <label class="block text-sm font-medium">Téléphone</label>
+          <input id="pack-phone" type="tel" inputmode="numeric" maxlength="10" class="w-full sm:w-64 border rounded p-2" />
+        </div>
+        <div class="mt-4 flex items-center justify-between">
+          <div>
+            <div id="pack-delivery" class="text-sm text-gray-700"></div>
+            <div id="pack-total" class="text-lg font-semibold mt-1">Total: 0 DH</div>
+            <div id="pack-feedback" class="text-sm text-red-600 mt-1"></div>
+          </div>
+          <div>
+            <button id="pack-submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto">Valider le pack</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <!-- About section -->
   <footer class="bg-white mt-12 py-12">
