--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -138,31 +138,43 @@
         <div class="mt-4">
           <p class="text-sm text-gray-600">Sélectionnez plusieurs produits et définissez la quantité pour chacun.</p>
         </div>
-        <div class="mt-4">
-          <div id="pack-products" class="space-y-3 max-h-56 overflow-y-auto border rounded p-2"></div>
-        </div>
-        <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4">
-          <div>
-            <label class="block text-sm font-medium">Votre nom</label>
-            <input id="pack-name" type="text" class="w-full border rounded p-2" />
+        <!-- Step 1: product selection -->
+        <div id="pack-step-1">
+          <div class="mt-4">
+            <div id="pack-products" class="space-y-3 max-h-56 overflow-y-auto border rounded p-2"></div>
           </div>
-          <div>
-            <label class="block text-sm font-medium">Ville (livraison)</label>
-            <select id="pack-city" class="w-full border rounded p-2"></select>
+          <div class="mt-4 flex justify-end">
+            <div id="pack-feedback" class="text-sm text-red-600 mr-auto"></div>
+            <button id="pack-next" class="bg-green-600 text-white px-4 py-2 rounded">Suivant</button>
           </div>
         </div>
-        <div class="mt-4">
-          <label class="block text-sm font-medium">Téléphone</label>
-          <input id="pack-phone" type="tel" inputmode="numeric" maxlength="10" class="w-full sm:w-64 border rounded p-2" />
-        </div>
-        <div class="mt-4 flex items-center justify-between">
-          <div>
-            <div id="pack-delivery" class="text-sm text-gray-700"></div>
-            <div id="pack-total" class="text-lg font-semibold mt-1">Total: 0 DH</div>
-            <div id="pack-feedback" class="text-sm text-red-600 mt-1"></div>
+
+        <!-- Step 2: contact & confirmation -->
+        <div id="pack-step-2" style="display:none">
+          <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+              <label class="block text-sm font-medium">Votre nom</label>
+              <input id="pack-name" type="text" class="w-full border rounded p-2" />
+            </div>
+            <div>
+              <label class="block text-sm font-medium">Ville (livraison)</label>
+              <select id="pack-city" class="w-full border rounded p-2"></select>
+            </div>
           </div>
-          <div>
-            <button id="pack-submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto">Valider le pack</button>
+          <div class="mt-4">
+            <label class="block text-sm font-medium">Téléphone</label>
+            <input id="pack-phone" type="tel" inputmode="numeric" maxlength="10" class="w-full sm:w-64 border rounded p-2" />
+          </div>
+          <div class="mt-4 flex items-center justify-between">
+            <div>
+              <div id="pack-delivery" class="text-sm text-gray-700"></div>
+              <div id="pack-total" class="text-lg font-semibold mt-1">Total: 0 DH</div>
+              <div id="pack-feedback-step2" class="text-sm text-red-600 mt-1"></div>
+            </div>
+            <div class="flex items-center space-x-2">
+              <button id="pack-back" class="bg-gray-200 text-gray-800 px-4 py-2 rounded">Retour</button>
+              <button id="pack-submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full sm:w-auto">Valider le pack</button>
+            </div>
           </div>
         </div>
       </div>
